--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "dependencies": {
-    "puppeteer": "^13.5.1"
-  }
+    "type": "module",
+    "dependencies": {
+        "puppeteer": "^13.5.1"
+    }
 }
