--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "type": "module",
     "dependencies": {
-        "puppeteer": "^13.5.1"
+        "puppeteer": "^13.5.1",
+        "src": "^1.1.2"
     }
 }
